tests/baselines/reference/parserTypeQuery7.errors.txt
==== tests/cases/compiler/parserTypeQuery7.ts (1 errors) ====
    var v: typeof A[]
                  ~
!!! parserTypeQuery7.ts(1,15): error TS2095: Cannot find name 'A'.